plugins {
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

subprojects {

	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'io.spring.dependency-management'

	group = 'com.example.service.user'
	version = '0.0.1'
	sourceCompatibility = '8'

	repositories {
		mavenCentral()
	}

	test {
		useJUnitPlatform()
	}

	dependencyManagement {
		imports {
			mavenBom('org.springframework.boot:spring-boot-dependencies:2.4.1')
		}
	}
}
